# Anyness

./: .gitignore  .gitmodules  Any.cpp  Any.hpp  Any.inl  Block.cpp  Block.hpp  Block.inl  BlockMap.hpp  BlockMap.inl  Bytes.cpp  Bytes.hpp  Bytes.inl  CMakeLists.txt  CMakeSettings.json  Doxyfile  Iterator.hpp  LICENSE  LangulusUtilities.cmake  Map.cpp  Map.hpp  Map.inl  OrderedMap.cpp  OrderedMap.hpp  Pair.hpp  Path.cpp  Path.hpp  README.md  TAny.hpp  TAny.inl  TFactory.hpp  TFactory.inl  THashMap.hpp  THashMap.inl  THashSet.hpp  TMap.hpp  TMap.inl  TOrderedMap.hpp  TOrderedMap.inl  TPair.hpp  (+14 more)
.github/workflows/: ci.yml  default.yml  dispatch.yml
cmake/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FetchLangulusModule.cmake
include/: Langulus.Anyness.hpp  LangulusAnyness.hpp
include/Anyness/: Any.hpp  Bytes.hpp  Construct.hpp  Edit.hpp  Many.hpp  Map.hpp  Neat.hpp  OrderedMap.hpp  Own.hpp  Pair.hpp  Path.hpp  Pool.hpp  Ref.hpp  Referenced.hpp  Serial.hpp  Set.hpp  TAny.hpp  THive.hpp  TMany.hpp  TMap.hpp  TOrderedMap.hpp  TPair.hpp  TSet.hpp  TUnorderedMap.hpp  TUnorderedSet.hpp  Text.hpp  Trait.hpp  UnorderedMap.hpp  UnorderedSet.hpp  Verb.hpp
include/Anyness/View/: Any.hpp  Map.hpp  Set.hpp
inner/: Allocation.hpp  Allocation.inl  Allocator.cpp  Allocator.hpp  Allocator.inl  Block.cpp  Block.hpp  Block.inl  Config.hpp  DataNode.hpp  DataNode.inl  DataState.hpp  DataState.inl  Exceptions.hpp  Hashing.hpp  Index.hpp  Index.inl  Integration.hpp  Logger.cpp  Logger.hpp  Logger.inl  NameOf.hpp  Pool.hpp  Pool.inl  Reflection.hpp  Reflection.inl  TElement.hpp  TElement.inl  TypeList.hpp  Utilities.hpp
source/: Any.hpp  Any.inl  Block.cpp  Block.hpp  Block.inl  BlockMap.hpp  BlockMap.inl  BlockSet.hpp  BlockSet.inl  Bytes.cpp  Bytes.hpp  Bytes.inl  Charge.hpp  Charge.inl  Compare.hpp  Config.hpp  Construct.hpp  Construct.inl  DataState.hpp  DataState.inl  Index.hpp  Index.inl  Iterator.hpp  Map.hpp  Map.inl  Neat.hpp  Neat.inl  OrderedMap.hpp  OrderedMap.inl  OrderedSet.hpp  OrderedSet.inl  Pair.hpp  Pair.inl  Path.cpp  Path.hpp  Path.inl  Referenced.cpp  Referenced.hpp  Set.hpp  Set.inl  (+36 more)
source/blocks/: Block-Capsulation.inl  Block-Compare.inl  Block-Construct.inl  Block-Indexing.inl  Block-Insert.inl  Block-Iteration.inl  Block-Memory.inl  Block-RTTI.inl  Block-Remove.inl  Block.cpp  Block.hpp  Block.inl  BlockMap.hpp  BlockMap.inl  BlockSet-Capsulation.inl  BlockSet-Compare.inl  BlockSet-Construct.inl  BlockSet-Indexing.inl  BlockSet-Insert.inl  BlockSet-Iteration.inl  BlockSet-Memory.inl  BlockSet-RTTI.inl  BlockSet-Remove.inl  BlockSet.hpp  BlockSet.inl
source/blocks/Block/: Block-Capsulation.inl  Block-Compare.inl  Block-Construct.inl  Block-Convert.inl  Block-Describe.inl  Block-Indexing.inl  Block-Insert.inl  Block-Iteration.inl  Block-Memory.inl  Block-RTTI.inl  Block-Remove.inl
source/blocks/BlockMap/: BlockMap-Capsulation.inl  BlockMap-Compare.inl  BlockMap-Construct.inl  BlockMap-Indexing.inl  BlockMap-Insert.inl  BlockMap-Iteration.inl  BlockMap-Memory.inl  BlockMap-RTTI.inl  BlockMap-Remove.inl
source/blocks/BlockSet/: BlockSet-Capsulation.inl  BlockSet-Compare.inl  BlockSet-Construct.inl  BlockSet-Indexing.inl  BlockSet-Insert.inl  BlockSet-Iteration.inl  BlockSet-Memory.inl  BlockSet-RTTI.inl  BlockSet-Remove.inl
source/components/: Components.hpp  Layouts.hpp
source/fractalloc/: Allocator.cpp  Allocator.hpp  Pool.hpp  Pool.inl
source/inner/: Allocation.hpp  Allocation.inl  Allocator.cpp  Allocator.hpp  Charge.hpp  Charge.inl  Compare.hpp  Config.hpp  DataState.hpp  DataState.inl  Handle.hpp  Handle.inl  Index.hpp  Index.inl  Iterator.hpp  NoAllocator.hpp  Pool.hpp  Pool.inl
source/many/: Any.hpp  Any.inl  Bytes.hpp  Bytes.inl  Construct.hpp  Construct.inl  Many.hpp  Many.inl  Neat.hpp  Neat.inl  TAny.hpp  TAny.inl  THive.hpp  THive.inl  TMany.hpp  TMany.inl  TTrait.hpp  TTrait.inl  Trait.hpp  Trait.inl
source/maps/: Map.hpp  Map.inl  TMap.hpp  TMap.inl
source/memory/: Allocation.hpp  Allocation.inl  NoAllocator.hpp
source/one/: Handle.hpp  Handle.inl  Own.hpp  Own.inl  Ref.hpp  Ref.inl  TOwned.hpp  TOwned.inl  TPointer.hpp  TPointer.inl
source/pairs/: Pair.hpp  Pair.inl  TPair.hpp  TPair.inl
source/sets/: Set.hpp  Set.inl  TSet.hpp  TSet.inl
source/text/: Path.hpp  Path.inl  Text.hpp  Text.inl
source/unmanaged/: NoAllocator.hpp
source/verbs/: Clone.cpp  Compare.inl  Compress.cpp  Copy.cpp  Encrypt.cpp  Select.cpp  Select.inl  Verb.hpp  Verb.inl  VerbState.hpp  VerbState.inl
test/: CMakeLists.txt  CollectGarbage.inl  Common.hpp  Main.cpp  Main.hpp  TestAllocator.cpp  TestAny.cpp  TestBytes.cpp  TestConstruct.cpp  TestDeep.cpp  TestHandle.cpp  TestHashing.cpp  TestHive.cpp  TestIncomplete.cpp  TestIteration.cpp  TestMain.cpp  TestMain.hpp  TestMaps.cpp  TestNeat.cpp  TestNewDelete.cpp  TestOperators.cpp  TestPointers.cpp  TestReflection.cpp  TestSets.cpp  TestTAny.cpp  TestTAnyDense.cpp  TestTAnySparse.cpp  TestTFactory.cpp  TestTHashMap.cpp  TestTMap.cpp  TestTOrderedMap.cpp  TestTUnorderedMap.cpp  TestText.cpp  TestTypeCorrectness.cpp  TestTypes.hpp
test/any/: TestAnyCommon.hpp  TestAnyConversion.cpp  TestAnyDense.cpp  TestAnySparse.cpp
test/many/: TestManyCommon.hpp  TestManyConversion.cpp  TestManyCornerCases.cpp  TestManyDeep.cpp  TestManyDense.cpp  TestManySemantics.cpp  TestManySparse.cpp
test/map/: TestMapCommon.cpp  TestMapCommon.hpp  TestMapCornerCases.cpp  TestMapDense.cpp  TestMapSparse.cpp
test/pair/: TestPairCommon.hpp  TestPairDense.cpp  TestPairSparse.cpp
test/set/: TestSetCommon.hpp  TestSetCornerCases.cpp  TestSetDense.cpp  TestSetSparse.cpp
verbs/: Clone.cpp  Compare.cpp  Compare.inl  Compress.cpp  Copy.cpp  Encrypt.cpp  Reference.cpp  Select.cpp
